feat: changed the letter text!

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="text">
                         <strong>Здравейте,</strong>
                         <p>
-                            Съжалявам за казаните думи, бях виновен за това си действие и ще опитам да го променя!! : ) 
+                            Съжалявам за казаните думи, виновен съм и наистина се надявам да ми простите!!! : )
                         </p>
                     </div>
                 </div>
